<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown" >

    <TextView
        android:id="@+id/ingameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ingame_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/footerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/footer"
        android:textAppearance="?android:attr/textAppearanceMedium" />




    <TextView
        android:id="@+id/versusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/playerChoice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/versus"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/scoreOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/temp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/rockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/buttonDefault"
            android:onClick="playRock"
            android:src="@drawable/rock" />

        <ImageButton
            android:id="@+id/paperButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/buttonDefault"
            android:onClick="playPaper"
            android:src="@drawable/paper" />

        <ImageButton
            android:id="@+id/scissorsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/buttonDefault"
            android:onClick="playScissors"
            android:src="@drawable/scissors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/lizardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/buttonDefault"
            android:onClick="playLizard"
            android:src="@drawable/lizard" />

        <ImageButton
            android:id="@+id/spockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/buttonDefault"
            android:onClick="playSpock"
            android:src="@drawable/spock" />
    </LinearLayout>

    <TextView
        android:id="@+id/winnerOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/orange"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ingameTitle"
        android:text="@string/temp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/scoreOutput"
        android:onClick="rules"
        android:text="@string/rules"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/versusTextView"
        android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/youTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/you"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/playerChoice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/buttonDefault"
                    android:src="@drawable/circle" />

            </LinearLayout>
        
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                android:layout_weight="1">
                <TextView
                    android:id="@+id/cpuTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cpu"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                              
	            <ImageView
	                android:id="@+id/computerChoice"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="@null"
	                android:contentDescription="@string/buttonDefault"
	                android:src="@drawable/circle" />
            </LinearLayout>
       
    </LinearLayout>
    
</RelativeLayout>
